<resources>
    <string name="app_name">TheBestWay</string>

    <!-- Label for overflow menu option that inserts fake collect data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Data</string>

    <!-- Label for overflow menu option that deletes all collect data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Data</string>

    <!-- Title for the activity to add a new collect [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_collect">Add a Regional/Brand</string>

    <!-- Label for editor menu option to save collect and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current collect [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Brand Name and Date</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Most wanted</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_regional_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_directional">Date</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_descpet_weight">Weight</string>


    <!-- Label for dropdown menu option if the collect is male [CHAR LIMIT=20] -->
    <string name="gender_male">uza Sana</string>

    <!-- Label for dropdown menu option if the collect is female [CHAR LIMIT=20] -->
    <string name="gender_female">uza Kidogo</string>

    <string name="gender_unknown">uza Kawaida</string>
    <string name="error_saving">Error with saving regional</string>
    <string name="pet_saved">"Regional saved with row id: "</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>


    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a collect [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a Regional</string>
    <string name="editor_activity_title_edit_pet">Edit Regional</string>
    <string name="update_pet_failed">Updating Regional failed</string>
    <string name="update_pet_success">Updating Regional successful</string>

    <!-- Toast message in editor when current collect was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Regional deleted</string>

    <!-- Toast message in editor when current collect has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting Regional</string>

    <!-- Dialog message to ask the user to confirm deleting the current collect [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Regional?</string>

    <!-- Dialog button text for the option to confirm deleting the current collect [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current collect [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <color name="bg_login">#26ae90</color>
    <color name="bg_register">#2e3237</color>
    <color name="bg_main">#428bca</color>
    <color name="white">#ffffff</color>
    <color name="input_login">#222222</color>
    <color name="input_login_hint">#999999</color>
    <color name="input_register">#888888</color>
    <color name="input_register_bg">#3b4148</color>
    <color name="input_register_hint">#5e6266</color>
    <color name="btn_login">#26ae90</color>
    <color name="btn_login_bg">#eceef1</color>
    <color name="lbl_name">#333333</color>
    <color name="btn_logut_bg">#ff6861</color>


    <!--Intro slide-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GO</string>

    <string name="slide_1_title">Manage Product!</string>
    <string name="slide_1_desc">The easiest way to understand performance your product!</string>

    <string name="slide_2_title">Regional Control</string>
    <string name="slide_2_desc">See all regions that outsell product!</string>

    <string name="slide_3_title">Most wanted products</string>
    <string name="slide_3_desc">Know what products prefered by customers!</string>

    <string name="slide_4_title">Knows your Competitors</string>
    <string name="slide_4_desc">Find out what others doing on the same fields!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="search_mikoa">Search Mikoa</string>
    <string name="search_for_search">Setting for search</string>
    <string name="search_regional">Search Regional</string>
    <string name="title_activity_search_main_content">SearchMainContentActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="no_results">No available regions</string>
    <string name="search_instructions">Display regional</string>


    <!--trial-->
    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results2">No results found for \"%s\"</string>

    <string name="pref_last_sync">last_sync</string>
    <string name="sync_account_type">muchbeer.ukawa.news</string>
    <string name="content_authority">muchbeer.king.datacollect.collectprovider</string>

    <string name="pref_location_title">Habari za mikoa</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">collect</string>

    <!-- Label for genral news option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_label_general">general</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Data Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="action_refresh">refresh</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="location_mkoa">Location Mkoa</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>
    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>
    <string name="button_undo">Undo</string>


</resources>
